Added basic template.

--- a/ecdc_status/maxims/templates/maxim.html
+++ b/ecdc_status/maxims/templates/maxim.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>#{{id}}: {{text}}</title>
+    {% load static %}
+    <!-- <link href="{% static "css/some_css_file.css" %}" rel="stylesheet"> -->
   </head>
 
   <body>
