--- a/ecdc_status/maxims/templates/maxim.html
+++ b/ecdc_status/maxims/templates/maxim.html
@@ -3,7 +3,7 @@
   <head>
     <title>Code Maxims</title>
     {% load static %}
-    <link href="{% static "css/style.css" %}" rel="stylesheet">
+    <link href="{% static "css/maxim.css" %}" rel="stylesheet">
   </head>
 
   <body>
